Updated using position

--- a/index.html
+++ b/index.html
@@ -33,7 +33,21 @@
         <div class="order-items">
 
             <p>Course</p>
-            <p>My learnings</p>
+            <!---<p>My learnings</p>-->
+
+            <div class="mylearning">
+
+                <p>My learnings</p> 
+
+                    <div class="mylearning__popup">
+
+                          <p>You did not purchase any course yet</p>
+
+                    </div>
+
+
+
+            </div>
             <i class="fa-solid fa-cart-shopping"></i>
             <i class="fa-solid fa-bell"></i>
             <i class="fa-solid fa-user"></i>
@@ -56,7 +70,15 @@
     </div>
     <!--Sale-image--->
     <div class="sale-images">
-        <img src="images/Sale-img.png">
+        <img src="images/Sale-img.jpg">
+
+        <div class="sale-images-offerbox">
+
+                <h1>Udemy Flash Sale! 24 hours to save</h1>
+                <p>Get the top Courses for just Rs:499 only just one day to save but life time offer</p>
+
+
+        </div>
     </div>
     <!--Recomended--->
     <div class="recomended">
