--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
             <i class="fa-solid fa-bell"></i>
             <i class="fa-solid fa-user"></i>
         </div>
+        <div class="navbarnew">
+            <i class="fa-solid fa-bars"></i>
+        </div>
     </div>
+
+        
 
     <!--Category--->
 
