--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="sale-images-offerbox">
 
                 <h2>Udemy Flash Sale! 24 hours to save</h2>
-                <p>Get the top Courses for just Rs:499 only just one day to save but life time offer</p>
+                <p>Get the top Courses for just Rs:499 only.</p>
 
 
         </div>
